--- a/chem_canvas/package.json
+++ b/chem_canvas/package.json
@@ -24,15 +24,19 @@
     "@supabase/supabase-js": "^2.57.4",
     "clsx": "^2.1.1",
     "firebase": "^12.4.0",
-    "katex": "^0.16.23",
+    "katex": "^0.16.25",
     "lucide-react": "^0.344.0",
     "mime": "^4.1.0",
     "pdfjs-dist": "^5.4.296",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-katex": "^3.1.0",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^10.1.0",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
