--- a/chem_canvas/package.json
+++ b/chem_canvas/package.json
@@ -38,7 +38,8 @@
     "reactflow": "^11.11.4",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "three": "^0.165.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
