--- a/chem_canvas/package.json
+++ b/chem_canvas/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.344.0",
     "mime": "^4.1.0",
     "pdfjs-dist": "^5.4.296",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-katex": "^3.1.0",
